--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,7 @@ nav{
     background-position: center;
     background-size: cover;
     position: relative;
+    
 }
 
 
@@ -137,12 +138,19 @@ nav{
     position: absolute;
     top: 65%;
     left: 40%;
+    flex-basis:  31%;
+    background: #ffeaea;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    
 }
 
 #h1aboutme{
     font-family: Playfair;
     font-size: 60px;
-    color:#1A5276;
+    color: #E27F54;
     text-align: center;
     padding-bottom: 30px;
 }
@@ -151,7 +159,7 @@ nav{
     word-spacing: normal;
     font-family: playfair;
     font-size: 25px;
-    color: black;
+    color: #4C4243;
     white-space:pre-line;
 }
 
@@ -162,11 +170,11 @@ nav{
     font-size: 60px;
     color:white;
     text-align: center;
+    padding-top: 10%
 
 }
 
 .skill-section{
-    padding-top: 13%;
     min-height: 80vh;
     width: 100%;
     background-position: center;
@@ -198,7 +206,7 @@ nav{
 .project{
     font-family: Playfair;
     font-size: 60px;
-    color: navy;
+    color: #E27F54;
     text-align: center;
 }
 
@@ -225,6 +233,7 @@ nav{
     padding: 20px 12px;
     box-sizing: border-box;
     transition: .25s;
+    color: #4C4243;
 }
 
 #project-row:hover{
@@ -249,6 +258,7 @@ nav{
 #proj-id{
     font-size: 40px;
     text-align: center;
+    color: #5A575A;
 
 }
 
@@ -266,7 +276,7 @@ nav{
 #contact-id{
         font-family: Playfair;
         font-size:60px;
-        color: navy;
+        color: #E27F54;
         text-align: center;
 }
 
